--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,33 +1,38 @@
 name: Build
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    types: [ opened, synchronize ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up JDK 8
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '8'
-          distribution: 'adopt'
+          distribution: 'temurin'
 
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
 
-      - name: Assemble the jar
-        run: ./gradlew assemble
-
-      - name: Run the tests
-        run: ./gradlew check
+      - name: Run tests
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: assemble check
 
       - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v2
+        uses: mikepenz/action-junit-report@v3
+        if: always() # always run even if the previous step fails
         with:
-          report_paths: '**/build/test-results/test/TEST-*.xml'
+          check_name: JUnit Test Report
+          report_paths: '**/build/test-results/**/TEST-*.xml'
 
       - name: Publish Coverage Report
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
